--- a/public/css/style.css
+++ b/public/css/style.css
@@ -145,13 +145,14 @@ header{
 #navbar .container{
     background-color: #FFF;
     box-shadow:  0px .5px 2px 1px #cccccc inset;
+    height: 80px;
 }
 
 #navbar .navbar a{
     text-decoration: none;
     color: #000;
     font-size: 14px;
-    font-weight: 400;
+    font-weight: 500;
 }
 
 #navbar .navbar .active{
