pembuatan halaman daftar dan masuk

--- a/public/css/kirim-hewan.css
+++ b/public/css/kirim-hewan.css
@@ -82,7 +82,7 @@
 }
 
 #detail-kirim-hewan-2 .tambah-lokasi p {
-    /* font-size: 15px; */
+    font-size: 15px;
     font-weight: 500;
     color: #000;
 }
