--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,7 +1,7 @@
-body{
+body {
     padding: 0;
     margin: 0;
-    color: #fff;
+    color: #f7f7f7;
 }
 
 .container {
@@ -10,7 +10,23 @@ body{
 }
 
 /*header*/
-header{
+.header-1 {
+    width: 100%;
+    height: 80px;
+    background-color: #C1132F;
+}
+
+.header-1 h3 {
+    font-size: 32px;
+    font-weight: 700;
+}
+
+.header-1 a {
+    text-decoration: none;
+    color: #fff;
+}
+
+.header-2 {
     width: 100%;
     height: 80px;
     background-color: #F2B2B2;
@@ -20,36 +36,36 @@ header{
 
 /* home */
 
-#hero .container{
+#hero .container {
     background-color: #F8EDEC;
 }
 
-#hero .text-atas{
+#hero .text-atas {
     position: relative;
     bottom: 150px;
     margin-left: 15px;
 }
 
-#hero .text-atas .text-satu{
+#hero .text-atas .text-satu {
     color: #C1132F;
     font-size: 30px;
     font-weight: 700;
 
 }
 
-#hero .text-atas .text-dua{
+#hero .text-atas .text-dua {
     color: #000;
     font-size: 24px;
     font-weight: 700;
 }
 
-#hero .carousel-inner{
+#hero .carousel-inner {
     position: relative;
     bottom: 100px;
     padding: 0 30px;
 }
 
-#hero .carousel-indicators button{
+#hero .carousel-indicators button {
     width: 10px;
     height: 10px;
     border-radius: 50%;
@@ -57,35 +73,36 @@ header{
     bottom: 100px;
 }
 
-#hero .partial{
+#hero .partial {
     position: relative;
     bottom: 30px;
 }
+
 /* end home */
 
 /* menu */
 
-#menu .container{
+#menu .container {
     background-color: #F8EDEC;
 }
 
-#menu .text-tengah .text-satu{
+#menu .text-tengah .text-satu {
     color: #C1132F;
     font-size: 30px;
     font-weight: 700;
 }
 
-#menu .text-tengah .text-dua{
+#menu .text-tengah .text-dua {
     color: #000;
     font-size: 24px;
     font-weight: 700;
 }
 
-#menu .text-tengah h3{
+#menu .text-tengah h3 {
     margin-left: 15px;
 }
 
-#menu .text-tengah .deskripsi{
+#menu .text-tengah .deskripsi {
     color: #000;
     font-size: 14px;
     font-weight: 400;
@@ -93,72 +110,73 @@ header{
     padding: 0 15px;
 }
 
-#menu .daftar-menu a{
+#menu .daftar-menu a {
     width: 200px;
 }
+
 /* end menu */
 
 /* footer */
-#footer .container{
+#footer .container {
     background-color: #F8EDEC;
     height: 50vh;
 }
 
-#footer .logo{
+#footer .logo {
     margin: 0 20px;
     padding-top: 30px;
     padding-bottom: 15px;
 }
 
-#footer .sosial-media{
+#footer .sosial-media {
     margin-left: 10px;
     margin-top: 20px;
 }
 
-#footer .sosial-media a{
+#footer .sosial-media a {
     margin: 0 10px;
     background-color: #C1132F;
     border: 8px solid #C1132F;
     border-radius: 50%;
 }
 
-#footer .sosial-media a svg{
+#footer .sosial-media a svg {
     color: #FFF;
 }
 
-#footer .text-bawah{
+#footer .text-bawah {
     padding-left: 20px;
     margin-top: 40px;
 }
-#footer .text-bawah .text-satu{
+
+#footer .text-bawah .text-satu {
     color: #C1132F;
     font-size: 30px;
     font-weight: 700;
 }
 
-#footer .text-bawah .text-dua,.text-tiga{
+#footer .text-bawah .text-dua,
+.text-tiga {
     color: #000;
     font-size: 16px;
     font-weight: 400;
 }
 
-#navbar .container{
+#navbar .container {
     background-color: #FFF;
-    box-shadow:  0px .5px 2px 1px #cccccc inset;
+    box-shadow: 0px .5px 2px 1px #cccccc inset;
     height: 80px;
 }
 
-#navbar .navbar a{
+#navbar .navbar a {
     text-decoration: none;
     color: #000;
     font-size: 14px;
     font-weight: 500;
 }
 
-#navbar .navbar .active{
-    color:#C1132F;
+#navbar .navbar .active {
+    color: #C1132F;
 }
+
 /* end footer */
-
-
-
