--- a/public/front/css/style.css
+++ b/public/front/css/style.css
@@ -4,11 +4,6 @@ body {
     color: #f7f7f7;
 }
 
-.container {
-    width: 500px;
-    padding: 0;
-}
-
 /*header*/
 .header-1 {
     width: 100%;
@@ -31,18 +26,49 @@ body {
     height: 80px;
     background-color: #F2B2B2;
 }
+
+@media screen and (max-width: 600px) {
+    .header-1 {
+        width: 100%;
+        height: 80px;
+        background-color: #C1132F;
+    }
+
+    .header-1 h3 {
+        font-size: 24px;
+        font-weight: 700;
+    }
+
+    .header-1 a {
+        text-decoration: none;
+        color: #fff;
+    }
+
+    .header-2 {
+        width: 100%;
+        height: 80px;
+        background-color: #F2B2B2;
+    }
+}
 /* end header */
 
 
 /* home */
-
 #hero .container {
+    padding-top: 80px;
+}
+
+#hero .container .col-md-6{
+    padding: 0;
+}
+
+#hero .content{
     background-color: #F8EDEC;
 }
 
 #hero .text-atas {
     position: relative;
-    bottom: 150px;
+    bottom: 300px;
     margin-left: 15px;
 }
 
@@ -61,7 +87,7 @@ body {
 
 #hero .carousel-inner {
     position: relative;
-    bottom: 100px;
+    bottom: 250px;
     padding: 0 30px;
 }
 
@@ -70,7 +96,7 @@ body {
     height: 10px;
     border-radius: 50%;
     position: relative;
-    bottom: 100px;
+    bottom: 250px;
 }
 
 #hero .partial {
@@ -78,11 +104,50 @@ body {
     bottom: 30px;
 }
 
+@media screen and (max-width: 600px) {
+    #hero .text-atas {
+        position: relative;
+        bottom: 150px;
+        margin-left: 15px;
+    }
+
+    #hero .text-atas .text-satu {
+        color: #C1132F;
+        font-size: 30px;
+        font-weight: 700;
+
+    }
+
+    #hero .text-atas .text-dua {
+        color: #000;
+        font-size: 24px;
+        font-weight: 700;
+    }
+
+    #hero .carousel-inner {
+        position: relative;
+        bottom: 100px;
+        padding: 0 30px;
+    }
+
+    #hero .carousel-indicators button {
+        width: 10px;
+        height: 10px;
+        border-radius: 50%;
+        position: relative;
+        bottom: 100px;
+    }
+
+    #hero .partial {
+        position: relative;
+        bottom: 30px;
+    }
+}
 /* end home */
 
 /* menu */
 
-#menu .container {
+#menu .content {
     background-color: #F8EDEC;
 }
 
@@ -118,8 +183,16 @@ body {
 
 /* footer */
 #footer .container {
-    background-color: #F8EDEC;
     height: 50vh;
+}
+
+#footer .container .col-md-6{
+    padding: 0;
+}
+
+#footer .content{
+    background-color: #F8EDEC;
+    padding-bottom: 20vh;
 }
 
 #footer .logo {
@@ -130,7 +203,7 @@ body {
 
 #footer .sosial-media {
     margin-left: 10px;
-    margin-top: 20px;
+    margin-top: 10px;
 }
 
 #footer .sosial-media a {
@@ -162,7 +235,7 @@ body {
     font-weight: 400;
 }
 
-#navbar .container {
+#navbar .navbar {
     background-color: #FFF;
     box-shadow: 0px .5px 2px 1px #cccccc inset;
     height: 80px;
