menambah fitur kurir

--- a/public/front/css/akun-style.css
+++ b/public/front/css/akun-style.css
@@ -107,7 +107,7 @@
 #daftar .content {
     background-color: #F8EDEC;
     color: #000;
-    height: 90vh;
+    height: 100%;
 }
 
 #daftar .form-label {
